--- a/src/components/list-task/ListTask.module.css
+++ b/src/components/list-task/ListTask.module.css
@@ -13,6 +13,7 @@
     margin-bottom: 25px;
     color: rgb(88, 88, 88);
     font-family: 'Times New Roman', Times, serif;
+    text-align: left;
 }
 
 .task:hover {
